--- a/css/core.css
+++ b/css/core.css
@@ -10,7 +10,7 @@
 }
 
 body {
-    font-family: "Britannic Bold", sans-serif;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     background: #c2d0d0;
 }
 
@@ -18,10 +18,10 @@ body {
     width: 250px;
     height: 50px;
     font-size: 20px;
-    cursor: pointer;
-    border: 1px solid var(--orange);
-    background: black;
-    color: var(--orange);
+    /* cursor: pointer; */
+    border: 1px solid blur(10px);
+    background: rgb(68, 118, 210);
+    color: white;
     border-radius: 8px;
 }
 
@@ -31,7 +31,7 @@ body {
 
 .btn:active {
     background: #56585D;
-    border: 2px solid var(--orange);
+    border: 2px solid var(--blue);
 }
 
 a {
@@ -47,7 +47,7 @@ h1 {
     font-size: 70px;
     color: white;
     margin: 0 auto;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-weight: 600;
 }
 
@@ -56,7 +56,7 @@ h2 {
     font-size: 30px;
     color: white;
     margin: 0 auto;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-weight: 600;
 }
 
@@ -65,24 +65,25 @@ h3 {
     font-size: 30px;
     color: white;
     margin: 0 auto;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-weight: 600;
 }
 
 h4 {
     font-size: 24px;
     color: white;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     font-weight: 600;
 }
 
 strong {
-    color: #F79300;
+    color: rgb(68, 118, 210);
+    text-shadow: #183fb3 1px 1px 2px, #5275cd 0 0 1em, #ffffff 0 0 0.5em;
 }
 
 label {
     font-size: 24px;
-    color: var(--orange);
+    color: var(--blue);
 }
 
 input {
@@ -90,9 +91,9 @@ input {
     height: 50px;
     font-size: 20px;
     padding-left: 5px;
-    color: var(--orange);
+    color: var(--blue);
     background: black;
-    border: 2px solid var(--orange);
+    border: 2px solid var(--blue);
 }
 
 .checker {
@@ -104,21 +105,21 @@ input {
     display: block;
     width: 100px;
     height: 100px;
-    background: var(--orange);
-    color: black;
+    background: var(--blue);
+    color: rgb(245, 245, 245);
     font-size: 20px;
-    text-transform: uppercase;
+    /* text-transform: uppercase; */
     border-radius: 50%;
     font-weight: 800;
     z-index: 1;
 }
 
 .btn-slide:hover {
-    background: #b68733 !important;
-    cursor: pointer;
+    background:blur(10px) !important;
+    /* cursor: pointer; */
     color: white;
 }
 
 :root {
-    --orange: orange
+    --blue:  rgb(68, 118, 210);
 }
