--- a/css/home_works.css
+++ b/css/home_works.css
@@ -2,11 +2,20 @@
 /* GMAIL BLOCK */
 
 .gmail_block {
-    background: black;
+    background-image: url(/Img/nightmenu.jfif);
+    background-size: cover;
+    padding: 100px 0;
+}
+
+.gmail_block1{
+    background-image: url(/Img/banner.jpg);
+    background-size: cover;
     padding: 100px 0;
 }
 
 .inner_gmail_block {
+    background-image: url(/Img/bgduringhame.jpg);
+    background-size: cover;
     margin-top: 50px;
     display: flex;
     justify-content: space-evenly;
@@ -36,25 +45,29 @@
 
 .parent_block {
     height: 500px;
-    width: 500px;
-    border: 1px solid var(--orange);
+    width: 700px;
+    border: 5px solid var(--orange);
     position: relative;
     margin: 0 auto;
+    background-image: url('/Img/space.jpg');
+    background-size:cover;
 }
 
 .inner_parent_block {
+    
     height: 400px;
     width: 400px;
-    border: 1px solid var(--orange);
+    border: 5px solid var(--orange);
     border-radius: 18px;
+  
 }
 
 .child_block {
     position: absolute;
     top: 0;
-    width: 50px;
-    height: 50px;
-    background-color: red;
+    width: 10px;
+    height: 10px;
+    /* background-color: red; */
 }
 
 
