--- a/css/lessons.css
+++ b/css/lessons.css
@@ -2,10 +2,16 @@
 /* PHONE CHECKER */
 
 .phone_block {
-    background: black;
+   background-image: url(/Img/brwolfboy.jpeg);
+    background-size: cover;
     padding: 100px 0;
 }
 
+.phone_block1 {
+   background-image: url(/Img/bgblurboy.jpg);
+    background-size: cover;
+    padding: 100px 0;
+}
 .inner_phone_block {
     margin-top: 50px;
     display: flex;
@@ -31,7 +37,8 @@
 /* TAB SLIDER */
 
 .tab_slider {
-    background: black;
+    background-image: url(/Img/546720ab16ff32bec6f0ba212443705c_7895808299513774003.webp);
+    background-size: cover;
     padding: 100px 0;
 }
 
@@ -49,9 +56,10 @@
 }
 
 .tab_content_block p {
-    color: white;
+    color: rgb(16, 5, 136);
     margin-top: 10px;
     text-align: justify;
+    font-weight: 800;
 }
 
 .tab_content_items {
@@ -65,7 +73,7 @@
     padding: 10px;
     height: 30px;
     color: white;
-    border: 1px solid var(--orange);
+    border: 1px solid var(--blue);
     text-align: center;
     font-size: 20px;
     cursor: pointer;
@@ -74,7 +82,7 @@
 }
 
 .tab_content_item_active {
-    background: var(--orange);
+    background: var(--blue);
     color: black;
     font-weight: 600;
     border: 1px solid white;
@@ -99,7 +107,7 @@
 .card {
     width: 500px;
     height: 150px;
-    border: 1px solid var(--orange);
+    border: 1px solid var(--blue);
     text-align: center;
     display: flex;
     flex-direction: column;
@@ -109,7 +117,7 @@
 }
 
 .card p {
-    color: var(--orange);
+    color: var(--blue);
     font-size: 20px;
 }
 
@@ -131,7 +139,7 @@
 
 .converter {
     padding: 100px 0;
-    background-color: black;
+    background-image: url(/Img/waterhero.webp);
 }
 
 .inner_converter {
@@ -141,6 +149,7 @@
     flex-direction: column;
     gap: 30px;
     margin-top: 50px;
+    
 }
 
 .inner_converter > div {
@@ -173,3 +182,4 @@
 hr {
     width: 100%;
 }
+
